--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.10"
 dependencies = [
     "fastapi (>=0.115.11,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
-    "sqlalchemy (>=2.0.38,<3.0.0)"
+    "sqlalchemy (>=2.0.38,<3.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "alembic (>=1.15.1,<2.0.0)"
 ]
 
 [tool.poetry]
@@ -20,3 +22,6 @@ packages = [{include = "pwcexercise", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+seed-db = "pwcexercise.seeds.seed:main"
