--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ pandas = ">=2.2.3,<3.0.0"
 alembic = ">=1.15.1,<2.0.0"
 
 [tool.poetry.scripts]
-seed-db = "pwcexercise.seeds.seed:main"
+seed-db = "pwcexercise.seeds.seeder:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
